msm8960: added cpu underclock config

--- a/arch/arm/configs/sc06d_defconfig
+++ b/arch/arm/configs/sc06d_defconfig
@@ -455,6 +455,7 @@ CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 # CONFIG_SEC_PERIPHERAL_SECURE_CHK is not set
 CONFIG_SEC_L1_DCACHE_PANIC_CHK=y
 CONFIG_MSM_DCVS=y
+# CONFIG_MSM_USE_UNDERCLOCK is not set
 
 #
 # System MMU
