VoltageControl:fixed Part1

--- a/arch/arm/configs/sc06d_defconfig
+++ b/arch/arm/configs/sc06d_defconfig
@@ -379,7 +379,7 @@ CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_DALRPC is not set
-# CONFIG_CPU_VOLTAGE_TABLE is not set
+CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
@@ -455,7 +455,7 @@ CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 # CONFIG_SEC_PERIPHERAL_SECURE_CHK is not set
 CONFIG_SEC_L1_DCACHE_PANIC_CHK=y
 CONFIG_MSM_DCVS=y
-# CONFIG_MSM_USE_UNDERCLOCK is not set
+CONFIG_MSM_USE_UNDERCLOCK=y
 
 #
 # System MMU
