Overclocking:1.512GHz -> 1.890GHz

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2262,4 +2262,8 @@ config MSM_USE_UNDERCLOCK
 	bool "Use CPU Under Frequency"
 	default n	  
 
+config MSM_USE_OVERCLOCK
+	bool "Use CPU Under Frequency"
+	default n
+
 endif
