--- a/arch/arm/configs/sc06d_defconfig
+++ b/arch/arm/configs/sc06d_defconfig
@@ -624,6 +624,8 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SAKURACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -631,6 +633,8 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
+CONFIG_CPU_FREQ_GOV_SAKURACTIVE=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_SEC_DVFS=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
