--- a/arch/arm/configs/sc06d_samsung_defconfig
+++ b/arch/arm/configs/sc06d_samsung_defconfig
@@ -2356,6 +2356,7 @@ CONFIG_FB_MSM_TVOUT_NONE=y
 # CONFIG_FB_MSM_DEFAULT_DEPTH_RGB565 is not set
 # CONFIG_FB_MSM_DEFAULT_DEPTH_ARGB8888 is not set
 CONFIG_FB_MSM_DEFAULT_DEPTH_RGBA8888=y
+CONFIG_TGS3_MDNIE_CTRL=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_L4F00242T03 is not set
@@ -2966,6 +2967,7 @@ CONFIG_SPS_SUPPORT_BAMDMA=y
 CONFIG_CLKDEV_LOOKUP=y
 # CONFIG_BATTERY_SAMSUNG is not set
 CONFIG_VIBETONZ=y
+CONFIG_TGS3_VIB_CTRL=y
 # CONFIG_IRDA_MC96 is not set
 # CONFIG_ACCESSORY is not set
 # CONFIG_AUTHENTEC_VPNCLIENT_INTERCEPTOR is not set
