build: update defconfigs

--- a/arch/arm/configs/sc06d_samsung_defconfig
+++ b/arch/arm/configs/sc06d_samsung_defconfig
@@ -2816,6 +2816,7 @@ CONFIG_LEDS_TRIGGERS=y
 # CONFIG_NFC_DEVICES is not set
 CONFIG_FELICA=y
 # CONFIG_FELICA_DIAG is not set
+# CONFIG_FELICA_NO_SECURE is not set
 CONFIG_SWITCH=y
 # CONFIG_SWITCH_GPIO is not set
 # CONFIG_ACCESSIBILITY is not set
