Adreno 2xx GPU overclocking to 480 MHz

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2273,4 +2273,10 @@ config MSM_USE_OVERCLOCK
 	bool "Use CPU Over Frequency"
 	default n
 
+config GPU_OVERCLOCK
+	bool "Enable GPU Overclocking option"
+	default n
+	help
+	  Adreno2xx overclocking
+
 endif
