--- a/arch/arm/configs/sc06d_aosp_defconfig
+++ b/arch/arm/configs/sc06d_aosp_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.37 Kernel Configuration
+# Linux/arm 3.0.38 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -468,6 +468,7 @@ CONFIG_SEC_L1_DCACHE_PANIC_CHK=y
 CONFIG_MSM_DCVS=y
 CONFIG_MSM_USE_UNDERCLOCK=y
 CONFIG_MSM_USE_OVERCLOCK=y
+CONFIG_GPU_OVERCLOCK=y
 
 #
 # System MMU
@@ -537,6 +538,9 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
 CONFIG_SMP=y
 # CONFIG_SMP_ON_UP is not set
+CONFIG_ARM_CPU_TOPOLOGY=y
+CONFIG_SCHED_MC=y
+# CONFIG_SCHED_SMT is not set
 CONFIG_HAVE_ARM_SCU=y
 # CONFIG_ARM_ARCH_TIMER is not set
 CONFIG_VMSPLIT_3G=y
