--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -137,6 +137,12 @@ config CPU_FREQ_DEFAULT_GOV_WHEATLEY
 	help
 	  Use the CPUFreq governor 'wheatley' as default.
 
+config CPU_FREQ_DEFAULT_GOV_LAZY
+	bool "lazy"
+	select CPU_FREQ_GOV_LAZY
+	select CPU_FREQ_GOV_PERFORMANCE
+	help
+	  Use the CPUFreq governor 'lazy' as default.
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -267,6 +273,10 @@ config CPU_FREQ_GOV_SAKURACTIVE
 
 config CPU_FREQ_GOV_WHEATLEY
 	tristate "'wheatley' cpufreq governor"
+	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_LAZY
+	tristate "'lazy' cpufreq governor"
 	depends on CPU_FREQ
 
 config SEC_DVFS
