--- a/arch/arm/configs/sc06d_aosp_defconfig
+++ b/arch/arm/configs/sc06d_aosp_defconfig
@@ -78,6 +78,7 @@ CONFIG_LOG_BUF_SHIFT=17
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
+CONFIG_CGROUP_TIMER_SLACK=y
 # CONFIG_CGROUP_DEVICE is not set
 # CONFIG_CPUSETS is not set
 CONFIG_CGROUP_CPUACCT=y
@@ -629,11 +630,13 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SAKURACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -645,7 +648,17 @@ CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_FREQ_GOV_SAKURACTIVE=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_LAZY=y
 CONFIG_SEC_DVFS=y
+CONFIG_CPU_FREQ_GOV_LAGFREE=y
+CONFIG_LAGFREE_MAX_LOAD=50
+CONFIG_LAGFREE_MIN_LOAD=15
+CONFIG_LAGFREE_FREQ_STEP_DOWN=108000
+CONFIG_LAGFREE_FREQ_SLEEP_MAX=384000
+CONFIG_LAGFREE_FREQ_AWAKE_MIN=384000
+CONFIG_LAGFREE_FREQ_STEP_UP_SLEEP_PERCENT=20
+CONFIG_CPU_FREQ_MIN_TICKS=10
+CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
