--- a/arch/arm/configs/sc06d_samsung_defconfig
+++ b/arch/arm/configs/sc06d_samsung_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.38 Kernel Configuration
+# Linux/arm 3.0.39 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -16,7 +16,7 @@ CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_ARM_TICKET_LOCKS=y
-CONFIG_RWSEM_GENERIC_SPINLOCK=y
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
 CONFIG_GENERIC_HWEIGHT=y
@@ -66,9 +66,7 @@ CONFIG_IRQ_DOMAIN=y
 # RCU Subsystem
 #
 CONFIG_TREE_PREEMPT_RCU=y
-# CONFIG_JRCU is not set
 CONFIG_PREEMPT_RCU=y
-# CONFIG_PREEMPT_COUNT_CPU is not set
 # CONFIG_RCU_TRACE is not set
 CONFIG_RCU_FANOUT=32
 # CONFIG_RCU_FANOUT_EXACT is not set
@@ -80,13 +78,14 @@ CONFIG_LOG_BUF_SHIFT=17
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
+CONFIG_CGROUP_TIMER_SLACK=y
 # CONFIG_CGROUP_DEVICE is not set
 # CONFIG_CPUSETS is not set
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_CGROUP_MEM_RES_CTLR is not set
 CONFIG_CGROUP_SCHED=y
-# CONFIG_FAIR_GROUP_SCHED is not set
+CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
 CONFIG_NAMESPACES=y
@@ -631,22 +630,35 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SAKURACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_FREQ_GOV_SAKURACTIVE=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_LAZY=y
 CONFIG_SEC_DVFS=y
+CONFIG_CPU_FREQ_GOV_LAGFREE=y
+CONFIG_LAGFREE_MAX_LOAD=50
+CONFIG_LAGFREE_MIN_LOAD=15
+CONFIG_LAGFREE_FREQ_STEP_DOWN=108000
+CONFIG_LAGFREE_FREQ_SLEEP_MAX=384000
+CONFIG_LAGFREE_FREQ_AWAKE_MIN=384000
+CONFIG_LAGFREE_FREQ_STEP_UP_SLEEP_PERCENT=20
+CONFIG_CPU_FREQ_MIN_TICKS=10
+CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
@@ -1021,6 +1033,8 @@ CONFIG_DNS_RESOLVER=y
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
+CONFIG_HAVE_BPF_JIT=y
+CONFIG_BPF_JIT=y
 
 #
 # Network testing
@@ -3394,6 +3408,8 @@ CONFIG_CRYPTO_DEV_QCEDEV=m
 # Library routines
 #
 CONFIG_BITREVERSE=y
+CONFIG_GENERIC_STRNCPY_FROM_USER=y
+CONFIG_GENERIC_STRNLEN_USER=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
 # CONFIG_CRC_T10DIF is not set
