--- a/arch/arm/configs/sc06d_samsung_defconfig
+++ b/arch/arm/configs/sc06d_samsung_defconfig
@@ -465,8 +465,8 @@ CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 # CONFIG_SEC_PERIPHERAL_SECURE_CHK is not set
 CONFIG_SEC_L1_DCACHE_PANIC_CHK=y
 CONFIG_MSM_DCVS=y
-# CONFIG_MSM_USE_UNDERCLOCK is not set
-# CONFIG_MSM_USE_OVERCLOCK is not set
+CONFIG_MSM_USE_UNDERCLOCK=y
+CONFIG_MSM_USE_OVERCLOCK=y
 # CONFIG_GPU_OVERCLOCK is not set
 
 #
